--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -193,7 +193,6 @@
     "block.mubble.tomato": "Tomaten",
     "block.mubble.salad": "Salat",
     "block.mubble.cheese_block": "Käseblock",
-    "block.mubble.unstable_stone": "Instabiler Stein",
     "block.mubble.ultimatum_portal": "Ultimatum-Portal",
     "block.mubble.blue_balloon": "Blauer Luftballon",
     "block.mubble.light_blue_balloon": "Hellblauer Luftballon",
@@ -338,8 +337,8 @@
     "block.mubble.iron_puyo": "Eisen-Puyo",
     "block.mubble.puyo_block": "Puyo-block",
 
-    "block.mubble.rewind_block": "Rückspulblock",
     "block.mubble.koretato_block": "Koretato-block",
+    "//block.mubble.potato_flower": "Potato Flower",
 
     "comment": "ITEMS",
     "item.mubble.vanadium": "Vanadium",
