--- a/src/main/resources/assets/mubble/lang/en_us.json
+++ b/src/main/resources/assets/mubble/lang/en_us.json
@@ -195,7 +195,6 @@
     "block.mubble.tomato": "Tomatoes",
     "block.mubble.salad": "Salad",
     "block.mubble.cheese_block": "Cheese Block",
-    "block.mubble.unstable_stone": "Unstable Stone",
     "block.mubble.ultimatum_portal": "Ultimatum Portal",
     "block.mubble.blue_balloon": "Blue Balloon",
     "block.mubble.light_blue_balloon": "Light Blue Balloon",
@@ -341,6 +340,7 @@
     "block.mubble.puyo_block": "Puyo Block",
 
     "block.mubble.koretato_block": "Koretato Block",
+    "block.mubble.potato_flower": "Potato Flower",
 
     "comment": "ITEMS",
     "item.mubble.vanadium": "Vanadium",
