--- a/src/main/resources/assets/mubble/lang/lol_us.json
+++ b/src/main/resources/assets/mubble/lang/lol_us.json
@@ -195,7 +195,6 @@
     "block.mubble.tomato": "redd fud",
     "block.mubble.salad": "green fud",
     "block.mubble.cheese_block": "cheezy bloc",
-    "block.mubble.unstable_stone": "crac ston",
     "block.mubble.ultimatum_portal": "woah it iz en unusod porteel item.mubble",
     "block.mubble.blue_balloon": "bloo beloon",
     "block.mubble.light_blue_balloon": "legit bloo beloon",
@@ -340,8 +339,8 @@
     "block.mubble.iron_puyo": "ALIEEEEEEEN PYO AHHHHHHH",
     "block.mubble.puyo_block": "it's a pyo ston lol",
 
-    "block.mubble.rewind_block": "aww dat'z hawt",
     "block.mubble.koretato_block": "Koretato blok",
+    "//block.mubble.potato_flower": "Potato Flower",
 
     "comment": "ITEMS",
     "item.mubble.vanadium": "shiny purple",
