--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -340,7 +340,7 @@
     "block.mubble.puyo_block": "Block Puyo",
 
     "block.mubble.koretato_block": "Bloc Koretato",
-    "//block.mubble.potato_flower": "Potato Flower",
+    "block.mubble.potato_flower": "Fleur patate",
 
     "comment": "ITEMS",
     "item.mubble.vanadium": "Vanadium",
