Updated languages, Spring, Clouds

--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -489,7 +489,7 @@
     "advancements.mubble.get_super_crown.description": "Finde eine Super-Krone",
     "advancements.mubble.get_bandage.title": "Erholung",
     "advancements.mubble.get_bandage.description": "Erhalte ein Verband",
-    "//advancements.mubble.get_all_crowns.title": "Super-Stars",
+    "//advancements.mubble.get_all_crowns.title": "Heroines by Crown",
     "//advancements.mubble.get_all_crowns.description": "Get all the crowns",
     "//advancements.mubble.get_all_caps.title": "Super-Stars",
     "//advancements.mubble.get_all_caps.description": "Get all the caps",
