--- a/src/main/resources/assets/mubble/lang/en_us.json
+++ b/src/main/resources/assets/mubble/lang/en_us.json
@@ -489,7 +489,7 @@
     "advancements.mubble.get_super_crown.description": "Find a Super Crown",
     "advancements.mubble.get_bandage.title": "Recovery",
     "advancements.mubble.get_bandage.description": "Obtain a bandage",
-    "advancements.mubble.get_all_crowns.title": "Super-Stars",
+    "advancements.mubble.get_all_crowns.title": "Heroines by Crown",
     "advancements.mubble.get_all_crowns.description": "Get all the crowns",
     "advancements.mubble.get_all_caps.title": "Super-Stars",
     "advancements.mubble.get_all_caps.description": "Get all the caps",
