--- a/src/main/resources/assets/mubble/lang/es_es.json
+++ b/src/main/resources/assets/mubble/lang/es_es.json
@@ -419,7 +419,7 @@
     "advancements.mubble.get_super_crown.description": "Encuentra una supercorona",
     "advancements.mubble.get_bandage.title": "Recuperación",
     "advancements.mubble.get_bandage.description": "Obtén un vendaje",
-    "//advancements.mubble.get_all_crowns.title": "Super-Stars",
+    "//advancements.mubble.get_all_crowns.title": "Heroines by Crown",
     "//advancements.mubble.get_all_crowns.description": "Get all the crowns",
     "//advancements.mubble.get_all_caps.title": "Super-Stars",
     "//advancements.mubble.get_all_caps.description": "Get all the caps",
