--- a/src/main/resources/assets/mubble/lang/lol_us.json
+++ b/src/main/resources/assets/mubble/lang/lol_us.json
@@ -491,7 +491,7 @@
     "advancements.mubble.get_super_crown.description": "pliz dont",
     "advancements.mubble.get_bandage.title": "when u step on hedghog",
     "advancements.mubble.get_bandage.description": "u heal ur paw",
-    "//advancements.mubble.get_all_crowns.title": "Super-Stars",
+    "//advancements.mubble.get_all_crowns.title": "Heroines by Crown",
     "//advancements.mubble.get_all_crowns.description": "Get all the crowns",
     "//advancements.mubble.get_all_caps.title": "Super-Stars",
     "//advancements.mubble.get_all_caps.description": "Get all the caps",
