--- a/src/main/resources/assets/mubble/lang/en_ud.json
+++ b/src/main/resources/assets/mubble/lang/en_ud.json
@@ -491,7 +491,7 @@
     "advancements.mubble.get_super_crown.description": "uʍoɹƆ ɹǝdnS ɐ puᴉℲ",
     "advancements.mubble.get_bandage.title": "ʎɹǝʌoɔǝɹ",
     "advancements.mubble.get_bandage.description": "ǝƃɐpuɐq ɐ uᴉɐʇqO",
-    "//advancements.mubble.get_all_crowns.title": "Super-Stars",
+    "//advancements.mubble.get_all_crowns.title": "Heroines by Crown",
     "//advancements.mubble.get_all_crowns.description": "Get all the crowns",
     "//advancements.mubble.get_all_caps.title": "Super-Stars",
     "//advancements.mubble.get_all_caps.description": "Get all the caps",
