--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -490,7 +490,7 @@
     "advancements.mubble.get_super_crown.description": "Trouvez une super couronne",
     "advancements.mubble.get_bandage.title": "Récupération",
     "advancements.mubble.get_bandage.description": "Obtenez un bandage",
-    "//advancements.mubble.get_all_crowns.title": "Super-Stars",
+    "//advancements.mubble.get_all_crowns.title": "Heroines by Crown",
     "//advancements.mubble.get_all_crowns.description": "Get all the crowns",
     "//advancements.mubble.get_all_caps.title": "Super-Stars",
     "//advancements.mubble.get_all_caps.description": "Get all the caps",
