--- a/src/main/resources/assets/mubble/lang/pt_br.json
+++ b/src/main/resources/assets/mubble/lang/pt_br.json
@@ -493,7 +493,7 @@
     "advancements.mubble.get_bandage.description": "Obtenha uma bandagem",
     "advancements.mubble.get_all_caps.title": "Super-Estrelas",
     "advancements.mubble.get_all_caps.description": "Craftar todos os bonés",
-    "//advancements.mubble.get_all_crowns.title": "Super-Stars",
+    "//advancements.mubble.get_all_crowns.title": "Heroines by Crown",
     "//advancements.mubble.get_all_crowns.description": "Get all the crowns",
     "//advancements.mubble.get_all_caps.title": "Super-Stars",
     "//advancements.mubble.get_all_caps.description": "Get all the caps",
