--- a/src/main/resources/assets/mubble/lang/zh_cn.json
+++ b/src/main/resources/assets/mubble/lang/zh_cn.json
@@ -491,7 +491,7 @@
     "advancements.mubble.get_super_crown.description": "找到一顶超级王冠",
     "advancements.mubble.get_bandage.title": "康复",
     "advancements.mubble.get_bandage.description": "获得一个绷带",
-    "//advancements.mubble.get_all_crowns.title": "Super-Stars",
+    "//advancements.mubble.get_all_crowns.title": "Heroines by Crown",
     "//advancements.mubble.get_all_crowns.description": "Get all the crowns",
     "//advancements.mubble.get_all_caps.title": "Super-Stars",
     "//advancements.mubble.get_all_caps.description": "Get all the caps",
