Added Baguette, updated French

--- a/src/main/resources/assets/mubble/lang/en_ud.json
+++ b/src/main/resources/assets/mubble/lang/en_ud.json
@@ -343,6 +343,7 @@
 	"//block.mubble.potato_flower": "Potato Flower",
 
 	"comment": "ITEMS",
+	"//item.mubble.baguette": "Baguette",
 	"item.mubble.vanadium": "ɯnᴉpɐuɐΛ",
 	"item.mubble.bandage": "ǝƃɐpuɐᗺ",
 	"item.mubble.wheat_flour": "ɹnolℲ ʇɐǝɥM",
