--- a/src/main/resources/assets/mubble/lang/en_us.json
+++ b/src/main/resources/assets/mubble/lang/en_us.json
@@ -343,6 +343,7 @@
 	"block.mubble.potato_flower": "Potato Flower",
 
 	"comment": "ITEMS",
+	"item.mubble.baguette": "Baguette",
 	"item.mubble.vanadium": "Vanadium",
 	"item.mubble.bandage": "Bandage",
 	"item.mubble.wheat_flour": "Wheat Flour",
