--- a/src/main/resources/assets/mubble/lang/es_es.json
+++ b/src/main/resources/assets/mubble/lang/es_es.json
@@ -273,6 +273,7 @@
 	"//block.mubble.potato_flower": "Potato Flower",
 
 	"comment": "ITEMS",
+	"//item.mubble.baguette": "Baguette",
 	"item.mubble.vanadium": "Vanadio",
 	"item.mubble.bandage": "Vendaje",
 	"item.mubble.wheat_flour": "Harina de trigo",
