--- a/src/main/resources/assets/mubble/lang/lol_us.json
+++ b/src/main/resources/assets/mubble/lang/lol_us.json
@@ -343,6 +343,7 @@
 	"//block.mubble.potato_flower": "Potato Flower",
 
 	"comment": "ITEMS",
+	"//item.mubble.baguette": "Baguette",
 	"item.mubble.vanadium": "shiny purple",
 	"item.mubble.bandage": "banaj",
 	"item.mubble.wheat_flour": "wet floor",
