--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -343,6 +343,7 @@
 	"block.mubble.potato_flower": "Aardappelbloem",
 
 	"comment": "ITEMS",
+	"//item.mubble.baguette": "Baguette",
 	"item.mubble.vanadium": "Vanadium",
 	"item.mubble.bandage": "Verband",
 	"item.mubble.wheat_flour": "Tarwemeel",
