--- a/src/main/resources/assets/mubble/lang/pt_br.json
+++ b/src/main/resources/assets/mubble/lang/pt_br.json
@@ -343,6 +343,7 @@
 	"block.mubble.potato_flower": "Flor de Batata",
 
 	"comment": "ITEMS",
+	"//item.mubble.baguette": "Baguette",
 	"item.mubble.vanadium": "Vanadium",
 	"item.mubble.bandage": "Bandagem",
 	"item.mubble.wheat_flour": "Farinha de Trigo",
