--- a/src/main/resources/assets/mubble/lang/zh_cn.json
+++ b/src/main/resources/assets/mubble/lang/zh_cn.json
@@ -343,6 +343,7 @@
 	"//block.mubble.potato_flower": "Potato Flower",
 
 	"comment": "ITEMS",
+	"//item.mubble.baguette": "Baguette",
 	"item.mubble.vanadium": "钒",
 	"item.mubble.bandage": "绷带",
 	"item.mubble.wheat_flour": "小麦面粉",
