--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -343,6 +343,7 @@
 	"block.mubble.potato_flower": "Fleur patate",
 
 	"comment": "ITEMS",
+	"item.mubble.baguette": "Baguette",
 	"item.mubble.vanadium": "Vanadium",
 	"item.mubble.bandage": "Bandage",
 	"item.mubble.wheat_flour": "Farine de blé",
@@ -468,7 +469,7 @@
     "subtitles.block.note_block.jump": "Bloc note utilisé",
 	"subtitles.block.question_block.mubble.loot.super_mushroom": "Super champignon sorti d'un bloc ?",
 	"subtitles.block.question_block.mubble.loot.coin": "Pièce sortie d'un bloc ?",
-    "//subtitles.block.spring.trigger": "Spring triggered",
+    "subtitles.block.spring.trigger": "Ressort déclenché",
 	"subtitles.item.annoying_dog.disappear": "Disparition de chien agaçant",
 	"subtitles.item.annoying_dog.bark": "Aboiement de chien agaçant",
 	"subtitles.item.cape_feather.use": "Plume acrobate utilisée",
@@ -491,10 +492,10 @@
 	"advancements.mubble.get_super_crown.description": "Trouvez une super couronne",
 	"advancements.mubble.get_bandage.title": "Récupération",
 	"advancements.mubble.get_bandage.description": "Obtenez un bandage",
-	"//advancements.mubble.get_all_crowns.title": "Heroines by Crown",
-	"//advancements.mubble.get_all_crowns.description": "Get all the crowns",
-	"//advancements.mubble.get_all_caps.title": "Super-Stars",
-	"//advancements.mubble.get_all_caps.description": "Get all the caps",
+	"advancements.mubble.get_all_crowns.title": "Héroïnes par couronne",
+	"advancements.mubble.get_all_crowns.description": "Obtenez toutes les couronnes",
+	"advancements.mubble.get_all_caps.title": "Super Étoiles",
+	"advancements.mubble.get_all_caps.description": "Obtenez toutes les casquettes",
 	"advancements.mubble.get_vanadium.title": "Du vanadium !",
 	"advancements.mubble.get_vanadium.description": "Obtenez du vanadium",
 	"advancements.mubble.get_tetris_block.title": "Connectés à travers l'espace",
