--- a/src/main/resources/assets/mubble/lang/zh_tw.json
+++ b/src/main/resources/assets/mubble/lang/zh_tw.json
@@ -343,6 +343,7 @@
 	"//block.mubble.potato_flower": "Potato Flower",
 
 	"comment": "ITEMS",
+	"//item.mubble.baguette": "Baguette",
 	"item.mubble.vanadium": "釩",
 	"item.mubble.bandage": "繃帶",
 	"item.mubble.wheat_flour": "小麥麵粉",
