Updated languages (forgot strings)

--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -7,6 +7,22 @@
 	"comment": "BLOCKS",
 	"block.mubble.vanadium_block": "Vanadiumblok",
 	"block.mubble.vanadium_ore": "Vanadiumerts",
+	"//block.mubble.palm_planks": "Palm Planks",
+	"//block.mubble.palm_sapling": "Palm Sapling",
+	"//block.mubble.palm_log": "Palm Log",
+	"//block.mubble.stripped_palm_log": "Stripped Palm Log",
+	"//block.mubble.palm_wood": "Palm Wood",
+	"//block.mubble.stripped_palm_wood": "Stripped Palm Wood",
+	"//block.mubble.palm_leaves": "Palm Leaves",
+	"//block.mubble.palm_pressure_plate": "Palm Pressure Plate",
+	"//block.mubble.palm_trapdoor": "Palm Trapdoor",
+	"//block.mubble.palm_button": "Palm Button",
+	"//block.mubble.palm_stairs": "Palm Stairs",
+	"//block.mubble.palm_slab": "Palm Slab",
+	"//block.mubble.palm_vertical_slab": "Palm Vertical Slab",
+	"//block.mubble.palm_fence_gate": "Palm Fence Gate",
+	"//block.mubble.palm_fence": "Palm Fence",
+	"//block.mubble.palm_door": "Palm Door",
 	"block.mubble.blue_bricks": "Blauwe bakstenen",
 	"block.mubble.light_blue_bricks": "Lichtblauwe bakstenen",
 	"block.mubble.cyan_bricks": "Turquoise bakstenen",
