--- a/src/main/resources/assets/mubble/lang/pt_br.json
+++ b/src/main/resources/assets/mubble/lang/pt_br.json
@@ -7,22 +7,22 @@
 	"comment": "BLOCKS",
 	"block.mubble.vanadium_block": "Bloco de Vanadium",
 	"block.mubble.vanadium_ore": "Minério de Vanadium",
-	"//block.mubble.palm_planks": "Palm Planks",
-	"//block.mubble.palm_sapling": "Palm Sapling",
-	"//block.mubble.palm_log": "Palm Log",
-	"//block.mubble.stripped_palm_log": "Stripped Palm Log",
-	"//block.mubble.palm_wood": "Palm Wood",
-	"//block.mubble.stripped_palm_wood": "Stripped Palm Wood",
-	"//block.mubble.palm_leaves": "Palm Leaves",
-	"//block.mubble.palm_pressure_plate": "Palm Pressure Plate",
-	"//block.mubble.palm_trapdoor": "Palm Trapdoor",
-	"//block.mubble.palm_button": "Palm Button",
-	"//block.mubble.palm_stairs": "Palm Stairs",
-	"//block.mubble.palm_slab": "Palm Slab",
-	"//block.mubble.palm_vertical_slab": "Palm Vertical Slab",
-	"//block.mubble.palm_fence_gate": "Palm Fence Gate",
-	"//block.mubble.palm_fence": "Palm Fence",
-	"//block.mubble.palm_door": "Palm Door",
+	"block.mubble.palm_planks": "Tábua de Palmeira",
+	"block.mubble.palm_sapling": "Muda de Palmeira",
+	"block.mubble.palm_log": "Palmeira",
+	"block.mubble.stripped_palm_log": "Palmeira Descascada",
+	"block.mubble.palm_wood": "Madeira de Palmeira",
+	"block.mubble.stripped_palm_wood": "Madeira de Palmeira Descascada",
+	"block.mubble.palm_leaves": "Folhas de Palmeira",
+	"block.mubble.palm_pressure_plate": "Placa de Pressão de Palmeira",
+	"block.mubble.palm_trapdoor": "Alçapão de Palmeira",
+	"block.mubble.palm_button": "Botão de Palmeira",
+	"block.mubble.palm_stairs": "Escadas de Palmeira",
+	"block.mubble.palm_slab": "Laje de Palmeira",
+	"block.mubble.palm_vertical_slab": "Laje Vertical de Palmeira",
+	"block.mubble.palm_fence_gate": "Portão de Palmeira",
+	"block.mubble.palm_fence": "Cerca de Palmeira",
+	"block.mubble.palm_door": "Porta de Palmeira",
 	"block.mubble.blue_bricks": "Tijolos Azuis",
 	"block.mubble.light_blue_bricks": "Tijolos Azul Claros",
 	"block.mubble.cyan_bricks": "Tijolos Ciano",
@@ -484,7 +484,7 @@
     "subtitles.block.note_block.jump": "Note Block used",
 	"subtitles.block.question_block.mubble.loot.power_up": "Bloco de ? dropou um power up",
 	"subtitles.block.question_block.mubble.loot.coin": "Bloco de ? dropa uma moeda",
-    "//subtitles.block.spring.trigger": "Spring triggered",
+    "subtitles.block.spring.trigger": "Primavera acionada",
 	"subtitles.block.rewind_block.mubble.disappear": "Bloco de Rewind desaparece",
 	"subtitles.block.rewind_block.mubble.reappear": "Bloco de Rewind reaparece",
 	"subtitles.item.annoying_dog.disappear": "Cachorro Irritante desaparece",
