--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -7,22 +7,22 @@
 	"comment": "BLOCKS",
 	"block.mubble.vanadium_block": "Vanadiumblok",
 	"block.mubble.vanadium_ore": "Vanadiumerts",
-	"//block.mubble.palm_planks": "Palm Planks",
-	"//block.mubble.palm_sapling": "Palm Sapling",
-	"//block.mubble.palm_log": "Palm Log",
-	"//block.mubble.stripped_palm_log": "Stripped Palm Log",
-	"//block.mubble.palm_wood": "Palm Wood",
-	"//block.mubble.stripped_palm_wood": "Stripped Palm Wood",
-	"//block.mubble.palm_leaves": "Palm Leaves",
-	"//block.mubble.palm_pressure_plate": "Palm Pressure Plate",
-	"//block.mubble.palm_trapdoor": "Palm Trapdoor",
-	"//block.mubble.palm_button": "Palm Button",
-	"//block.mubble.palm_stairs": "Palm Stairs",
-	"//block.mubble.palm_slab": "Palm Slab",
-	"//block.mubble.palm_vertical_slab": "Palm Vertical Slab",
-	"//block.mubble.palm_fence_gate": "Palm Fence Gate",
-	"//block.mubble.palm_fence": "Palm Fence",
-	"//block.mubble.palm_door": "Palm Door",
+	"block.mubble.palm_planks": "Palmhouten planken",
+	"block.mubble.palm_sapling": "Palmkiemplant",
+	"block.mubble.palm_log": "Palmstam",
+	"block.mubble.stripped_palm_log": "Gestripte palmstam",
+	"block.mubble.palm_wood": "Palmhout",
+	"block.mubble.stripped_palm_wood": "Gestripte palmhout",
+	"block.mubble.palm_leaves": "Palmbladeren",
+	"block.mubble.palm_pressure_plate": "Palmhouten drukplaat",
+	"block.mubble.palm_trapdoor": "Palmhouten valluik",
+	"block.mubble.palm_button": "Palmhouten knop",
+	"block.mubble.palm_stairs": "Palmhouten trap",
+	"block.mubble.palm_slab": "Palmhouten plaat",
+	"block.mubble.palm_vertical_slab": "Palmhouten verticale plaat",
+	"block.mubble.palm_fence_gate": "Palmhouten poort",
+	"block.mubble.palm_fence": "Palmhouten hek",
+	"block.mubble.palm_door": "Palmhouten deur",
 	"block.mubble.blue_bricks": "Blauwe bakstenen",
 	"block.mubble.light_blue_bricks": "Lichtblauwe bakstenen",
 	"block.mubble.cyan_bricks": "Turquoise bakstenen",
@@ -359,7 +359,7 @@
 	"block.mubble.potato_flower": "Aardappelbloem",
 
 	"comment": "ITEMS",
-	"//item.mubble.baguette": "Baguette",
+	"item.mubble.baguette": "Baguette",
 	"item.mubble.vanadium": "Vanadium",
 	"item.mubble.bandage": "Verband",
 	"item.mubble.wheat_flour": "Tarwemeel",
@@ -484,7 +484,7 @@
     "subtitles.block.note_block.jump": "Nootblock wordt gebruikt",
 	"subtitles.block.question_block.mubble.loot.super_mushroom": "?-blok plundert super paddenstoel",
 	"subtitles.block.question_block.mubble.loot.coin": "?-blok laat munt vallen",
-    "//subtitles.block.spring.trigger": "Spring triggered",
+    "subtitles.block.spring.trigger": "Veer geactiveerd",
 	"subtitles.block.rewind_block.mubble.disappear": "Terugspoelblok verdwijnd",
 	"subtitles.block.rewind_block.mubble.reappear": "Terugspoelblok verschijnd",
 	"subtitles.item.annoying_dog.disappear": "Iritante hond verdrijnd",
