--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -7,22 +7,22 @@
 	"comment": "BLOCKS",
 	"block.mubble.vanadium_block": "Vanadium-block",
 	"block.mubble.vanadium_ore": "Vanadium-Erz",
-	"//block.mubble.palm_planks": "Palm Planks",
-	"//block.mubble.palm_sapling": "Palm Sapling",
-	"//block.mubble.palm_log": "Palm Log",
-	"//block.mubble.stripped_palm_log": "Stripped Palm Log",
-	"//block.mubble.palm_wood": "Palm Wood",
-	"//block.mubble.stripped_palm_wood": "Stripped Palm Wood",
-	"//block.mubble.palm_leaves": "Palm Leaves",
-	"//block.mubble.palm_pressure_plate": "Palm Pressure Plate",
-	"//block.mubble.palm_trapdoor": "Palm Trapdoor",
-	"//block.mubble.palm_button": "Palm Button",
-	"//block.mubble.palm_stairs": "Palm Stairs",
-	"//block.mubble.palm_slab": "Palm Slab",
-	"//block.mubble.palm_vertical_slab": "Palm Vertical Slab",
-	"//block.mubble.palm_fence_gate": "Palm Fence Gate",
-	"//block.mubble.palm_fence": "Palm Fence",
-	"//block.mubble.palm_door": "Palm Door",
+	"block.mubble.palm_planks": "Palmenholzbretter",
+	"block.mubble.palm_sapling": "Palmensetzling",
+	"block.mubble.palm_log": "Palmenstamm",
+	"block.mubble.stripped_palm_log": "Entrindeter Palmenstamm",
+	"block.mubble.palm_wood": "Palmenholz",
+	"block.mubble.stripped_palm_wood": "Entrindetes Palmenholz",
+	"block.mubble.palm_leaves": "Palmenlaub",
+	"block.mubble.palm_pressure_plate": "Palmenholzdruckplatte",
+	"block.mubble.palm_trapdoor": "Palmenholzfalltür",
+	"block.mubble.palm_button": "Palmenholzknopf",
+	"block.mubble.palm_stairs": "Palmenholztreppe",
+	"block.mubble.palm_slab": "Palmenholzstufe",
+	"block.mubble.palm_vertical_slab": "Senkrechte Palmenholzstufe",
+	"block.mubble.palm_fence_gate": "Palmenholzzauntor",
+	"block.mubble.palm_fence": "Palmenholzzaun",
+	"block.mubble.palm_door": "Palmenholztür",
 	"block.mubble.blue_bricks": "Blaue Ziegelsteine",
 	"block.mubble.light_blue_bricks": "Hellblaue Ziegelsteine",
 	"block.mubble.cyan_bricks": "Türkise Ziegelsteine",
